--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "npm": "6.12.1"
   },
   "scripts": {
-    "start": "node start server.js",
+    "start": "node server/server.js",
     "build": "npm run lint && ng build",
     "test": "ng test",
     "lint": "tslint --project .",
