--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "multer": "1.4.2",
     "path-framework": "0.6.1",
     "pouchdb-adapter-memory": "7.1.1",
-    "pouchdb-core": "7.1.1",
+    "pouchdb-core": "7.1.1"
+  },
+    "devDependencies": {
     "@angular-devkit/build-angular": "0.803.19",
     "@angular/cli": "8.3.19",
     "@angular/compiler-cli": "8.2.14",
@@ -63,5 +65,5 @@
     "tslint": "5.20.1",
     "tslint-angular": "3.0.2",
     "typescript": "3.5.3"
-  },
+  }
 }
