--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "path-framework": "0.6.1",
     "pouchdb-adapter-memory": "7.1.1",
     "pouchdb-core": "7.1.1"
+    "html": "1.0.0",
   },
     "devDependencies": {
     "@angular-devkit/build-angular": "0.803.19",
